--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>派櫻社區網址發佈頁</title>
     <meta name="description" content="派櫻社區網址發佈頁">
     <meta name="keywords" content="gamepy,gamepy.pro">
-    <link rel="stylesheet" href="/bfs/style.css" media="all">
+    <link rel="stylesheet" href="bfs/style.css" media="all">
 </head>
 <body>
     <div class="main">
         <div class="card-warp">
-            <img src="/bfs/flower.svg" alt="gamepy">
+            <img src="bfs/flower.svg" alt="gamepy">
             <h1>派櫻社區</h1>
             <h2>https://gamepy.pro</h2>
             <a class="button" href="https://gamepy.pro" target="_blank">Go</a>
